--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "angular-material": "~0.9.6",
-    "material-design-icons": "~2.0.0"
+    "ui-route": "*"
   },
   "resolutions": {
     "angular": "1.4.0"
